--- a/index.html
+++ b/index.html
@@ -65,13 +65,14 @@
 		
 					<p>Hi, I am Yong-Han Lin, you can call me Johanne or in Chinese: 林詠涵. I am currently a Human-Computer Interaction (HCI) research assistant located in Taiwan,
 						working with <a href="https://www.armuro.info/" target="_blank">Dr. Yung-Ju (Stanley) Chang</a> at the Mobile Ubiquitous Interaction (MUI) Lab.
-						I received the degree of B.S. in Computer Science in the summer of 2022 from the National Yang Ming Chiao Tung University (former: National Chiao Tung University). 
-						I am interested in investigating the problems mobile device users' face and create hybrid (human + machine intelligence) applications on mobile devices to solve their problems and 
-						for improving well-being. 
-						As a HCI researcher, my mission is to understand people's needs and assist in conveying them to computer systems.
-						Recently, I am conducting research to understand the usages and experiences of notification management functionalities on mobile devices, as well as users' preferences for manual, automatic, or hybrid approaches.
-						My research interests lie in the fields of <span style="font-weight: 600;color: #035772;">Human-Computer Interaction</span> and <span style="font-weight: 600;color: #035772;">Ubiquitous Computing</span>.
+						I received the degree of B.S. in Computer Science in the summer of 2022 from the National Yang-Ming Chiao-Tung University (former: National Chiao Tung University). 
 						
+					</p>
+					<p>My research interests lie in the fields of <span style="font-weight: 600;color: #035772;">Human-Computer Interaction</span> and <span style="font-weight: 600;color: #035772;">Ubiquitous Computing</span>.
+						I am interested in  investigating the well-being challenges in people’s daily interactions with ubiquitous technologies and create hybrid (human + machine intelligence) applications to solve their problems for improving well-being. 
+						As a HCI researcher, I envision a future in which all technologies understand people and support their well-being.
+						Recently, I am conducting research to understand the usages and experiences of notification management functionalities on mobile devices, as well as users' preferences for manual, automatic, or hybrid approaches.
+
 					</p>
 					<p>
 						In the past, I had two remote research internship experiences. One was at the UC Davis Collaborative and Social Computing (CSC) Lab, where I worked with <a href="http://www.haochuanwang.info/" target="_blank">Dr. Hao-Chuan Wang</a> 
@@ -87,8 +88,9 @@
 						Outside of research, I love to watch movies and play board games (Avalon is my favorite). 
 					</p>
 					<p>
-						<span style="font-weight: 600;color: #035772;">Looking for a Ph.D. position starting in Fall 2024! <br>
-						Happy to collaborate and connect with any researcher in the world. 😀</span>
+						<span style="font-weight: 600;color: #035772;">📢 Looking for a Ph.D. position starting in Fall 2024!
+						Happy to collaborate and connect with others. 😀 <br>
+						📩 alberta410476 [at] gmail [dot] com </span>
 					</p>					
 				</header>
 
@@ -169,6 +171,10 @@
 				<h5>(* indicates equal contribution)</h5>
 				<div class="row">
 					<ul>
+						<li><span style="font-weight: 600;color: #035772;">Pinning, Sorting, and Categorizing Notifications: A Mixed-methods Usage and Experience Study of Mobile Notification-management Features </span> 
+							[<a href="mailto:alberta.cs07@nycu.edu.tw" target="_blank">Request for paper</a>]  - project lead<br>
+							<u>Yong-Han Lin</u>,  Li-Ting Su, Uei-Dar Chen, Yi-Chi Lee, Peng-Jui Wang, Yung-Ju Chang (In submission to IMWUT '24')
+					   </li>
 						<li><span style="font-weight: 600;color: #035772;">Automatic, Manual, or Hybrid? A Preliminary Investigation of Users’ Perception of Features for Supporting Notification Management </span> 
 							[<a href="https://dl.acm.org/doi/abs/10.1145/3594739.3610699" target="_blank">ACM Digital Library</a>]  - project lead<br>
 							<u>Yong-Han Lin</u>,  Li-Ting Su, Uei-Dar Chen, Peng-Jui Wang, Yi-Chi Lee, Yung-Ju Chang (UbiComp/ISWC '23)
