change publication section style

--- a/index.html
+++ b/index.html
@@ -169,11 +169,11 @@
 			<section id="publications">
 				<h2>Publications</h2>
 				<h5><span style="font-weight: 600;">Keywords:</span> 
-					<a class="topic_trigger" id="topic_trigger_mobile_notifications" style="cursor: pointer;">mobile notifications</a> | 
-					<a class="topic_trigger" id="topic_trigger_experience_sampling_method" style="cursor: pointer;">experience sampling method</a> | 
-					<a class="topic_trigger" id="topic_trigger_ubiquitous_devices" style="cursor: pointer;">ubiquitous devices</a> | 
-					<a class="topic_trigger" id="topic_trigger_system_evaluation" style="cursor: pointer;">system evaluation</a> |  
-					<a class="topic_trigger" id="topic_trigger_social_support" style="cursor: pointer;">social support</a></h5>
+					<a class="topic_trigger" id="topic_trigger_mobile_notifications" style="cursor: pointer;"><span style="color: #035772;">mobile notifications</span></a> | 
+					<a class="topic_trigger" id="topic_trigger_experience_sampling_method" style="cursor: pointer;"><span style="color: #035772;">experience sampling method</span></a> | 
+					<a class="topic_trigger" id="topic_trigger_ubiquitous_devices" style="cursor: pointer;"><span style="color: #035772;">ubiquitous devices</span></a> | 
+					<a class="topic_trigger" id="topic_trigger_system_evaluation" style="cursor: pointer;"><span style="color: #035772;">system evaluation</span></a> |  
+					<a class="topic_trigger" id="topic_trigger_social_support" style="cursor: pointer;"><span style="color: #035772;">social support</span></a></h5>
 				<h5>(* indicates equal contribution)</h5>
 				<div style=border:solid;padding:1em;border-width:1px;border-radius:20px;padding-bottom:0.5em;margin-bottom:1.1em;border-color:#AAAAAA>
 					<h4>📍Representative Work -- On Notification Management</h4>
