--- a/index.html
+++ b/index.html
@@ -176,16 +176,16 @@
 					<a class="topic_trigger" id="topic_trigger_social_support" style="cursor: pointer;"><span style="color: #035772;">social support</span></a></h5>
 				<h5>(* indicates equal contribution)</h5>
 				<div style=border:solid;padding:1em;border-width:1px;border-radius:20px;padding-bottom:0.5em;margin-bottom:1.1em;border-color:#AAAAAA>
-					<h4>📍Representative Work -- On Notification Management</h4>
+					<h4><span style="font-weight: 600;">✨Main Research:</span> Notification Management - [<a><div class="tooltip" style="cursor: pointer; color: #035772;">Project Site<span class="tooltiptext">Soon to come...</span></div></a>]</h4>
 					<div class="row">
 						<ul>
 							
 							<li><div class="trigger mobile_notifications experience_sampling_method ubiquitous_devices system_evaluation" style="margin-bottom: 5px; padding: 5px;"><span style="font-weight: 600;color: #035772;">Pinning, Sorting, and Categorizing Notifications: A Mixed-methods Usage and Experience Study of Mobile Notification-management Features </span> 
-								[<a href="mailto:alberta.cs07@nycu.edu.tw" target="_blank">Request for paper</a>][Project Site]  - Full paper | Project lead<br>
+								[<a href="mailto:alberta.cs07@nycu.edu.tw" target="_blank">Request for paper</a>] - Full paper | Project lead<br>
 								<u>Yong-Han Lin</u>,  Li-Ting Su, Uei-Dar Chen, Yi-Chi Lee, Peng-Jui Wang, Yung-Ju Chang (In submission to IMWUT '24)
 						   </div></li>
 							<li><div class="trigger mobile_notifications experience_sampling_method ubiquitous_devices system_evaluation" style="margin-bottom: 5px; padding: 5px;"><span style="font-weight: 600;color: #035772;">Automatic, Manual, or Hybrid? A Preliminary Investigation of Users’ Perception of Features for Supporting Notification Management </span> 
-								[<a href="https://dl.acm.org/doi/abs/10.1145/3594739.3610699" target="_blank">ACM Digital Library</a>]  - Poster | Project Lead<br>
+								[<a href="https://dl.acm.org/doi/abs/10.1145/3594739.3610699" target="_blank">ACM Digital Library</a>] - Poster | Project Lead<br>
 								<u>Yong-Han Lin</u>,  Li-Ting Su, Uei-Dar Chen, Peng-Jui Wang, Yi-Chi Lee, Yung-Ju Chang (UbiComp/ISWC '23)
 							</div></li>
 							<li><div class="trigger mobile_notifications ubiquitous_devices system_evaluation" style="margin-bottom: 5px; padding: 5px;"><span style="font-weight: 600;color: #035772;">A Notification Management System for: Sorting and Classifying Smartphone’s Notifications </span>
@@ -201,7 +201,7 @@
 				<div class="row">
 					<ul>
 						<li><div class="trigger mobile_notifications experience_sampling_method ubiquitous_devices" style="margin-bottom: 5px; padding: 5px;"><span style="font-weight: 600;color: #035772;">Multiple Device Users' Actual and Ideal Cross-Device Usage for Multi-Stage Notification-Interactions: An ESM Study Addressing the Usage Gap and Impacts of Device Context </span> 
-							[<a href="https://dl.acm.org/doi/abs/10.1145/3544548.3580731" target="_blank">ACM Digital Library</a>]  - Full paper | Collaborator<br>
+							[<a href="https://dl.acm.org/doi/abs/10.1145/3544548.3580731" target="_blank">ACM Digital Library</a>] - Full paper | Collaborator<br>
 						   Fang-Ching Tseng, ​Zih-Yun Chiou, Ho-Hsuan Chuang,  Li-Ting Su, <u>Yong-Han Lin</u>, Yu-Rou Lin, Yi-Chi Lee, Peng-Jui Wang, Uei-Dar Chen, Yung-Ju Chang (CHI '23)
 						</div></li>
 						<li><div class="trigger social_support" style="margin-bottom: 5px; padding: 5px;"><span style="font-weight: 600;color: #035772;">Understanding the Characteristics of Visual Contents in Open Source Issue Discussions: A Case Study of Jupyter Notebook </span> 
