--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<meta property="og:title" content="Yong-Han Lin | Human-Computer Interaction" />
 		<meta property="og:type" content="website" />
 		<meta property="og:url" content="https://scod0401.github.io/" />
-		<meta property="og:image" content="images/avatar.jpg" />
+		<meta property="og:image" content="images/avatar_new.jpg" />
 		<meta property="og:description" content="Yong-Han Lin's personal website, she is currently a Human-Computer Interaction (HCI) research assistant at National Yang Ming Chiao Tung University." />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<link rel="stylesheet" href="assets\css\academicons-1.9.2\css/academicons.min.css">
@@ -32,9 +32,10 @@
 		<!-- Header -->
 		<header id="header">
 			<div class="inner">
-				<div class="image avatar"><img src="images/old_avatar.jpg" alt="" /></div>
+				<div class="image avatar"><img src="images/avatar_new.jpg" alt="A girl enjoying a beautiful day and smiling at Malibu Beach." /></div>
 				<div id="main_name">Yong-Han Lin</div>
 				<div id="self_intro">
+					<div><i class="fas fa-map-pin" aria-hidden="true"></i> Hsinchu, Taiwan (GMT+8)</div>
 					<!--<div>HCI Researcher | B.S. CS @NYCU</div>-->
 					<!--<div>Undergraduate Researcher in MUI Lab at NYCU</div>
 					<div>EX-Research Intern in HCD Lab at Polytechnique Montréal</div>
