--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
 		<link rel="icon" type="image/x-icon" href="images/logo.jpg">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<meta name="description" content="Yong-Han Lin's personal website, she is currently a Human-Computer Interaction (HCI) research assistant at National Yang Ming Chiao Tung University." />
+		<meta name="description" content="Yong-Han Lin's personal website, she is currently a Human-Computer Interaction (HCI) research assistant at Taiwan's National Yang-Ming Chiao-Tung University." />
 		<meta property="og:title" content="Yong-Han Lin | Human-Computer Interaction" />
 		<meta property="og:type" content="website" />
 		<meta property="og:url" content="https://scod0401.github.io/" />
 		<meta property="og:image" content="images/avatar_new.jpg" />
-		<meta property="og:description" content="Yong-Han Lin's personal website, she is currently a Human-Computer Interaction (HCI) research assistant at National Yang Ming Chiao Tung University." />
+		<meta property="og:description" content="Yong-Han Lin's personal website, she is currently a Human-Computer Interaction (HCI) research assistant at Taiwan's National Yang-Ming Chiao-Tung University." />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<link rel="stylesheet" href="assets\css\academicons-1.9.2\css/academicons.min.css">
 		
