add new pages about me

--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Yong-Han Lin | Human-Computer Interaction</title>
+		<title>Yong-Han Lin</title>
 		<link rel="icon" type="image/x-icon" href="images/logo.jpg">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<meta name="description" content="Yong-Han Lin's personal website, she is currently a Human-Computer Interaction (HCI) research assistant at Taiwan's National Yang-Ming Chiao-Tung University." />
-		<meta property="og:title" content="Yong-Han Lin | Human-Computer Interaction" />
+		<meta property="og:title" content="Yong-Han Lin" />
 		<meta property="og:type" content="website" />
 		<meta property="og:url" content="https://scod0401.github.io/" />
 		<meta property="og:image" content="images/avatar_new.jpg" />
@@ -51,6 +51,7 @@
 					<ul class="actions">
 						<li><a href="#updates" class="button col-4">Updates</a></li>
 						<li><a href="#publications" class="button col-4">Publications</a></li>
+						<li><a href="#more" class="button col-4">More</a></li>
 						<!--<li><a href="#projects" class="button col-4">Projects</a></li>-->
 						<!--<li><a href="#extracurricular_activities" class="button col-4">More</a></li>-->
 					</ul>
@@ -85,9 +86,6 @@
 						In the past, I had a remote research internship experience, at the Human-Centered Design Lab at Polytechnique Montréal led by <a href="https://jhcheng.me/" target="_blank">Dr. Jinghui Cheng</a>.
 						Also, I was a software engineering intern at Xaduro Inc., a travel tech startup in Taiwan.	 
 					</p>-->
-					<p>
-						Outside of research, I love to watch movies and play board games (Avalon is my favorite). 
-					</p>
 					<p>
 						<span style="font-weight: 600;color: #035772;">📢 Looking for a Ph.D. position starting in Fall 2024!
 						Happy to collaborate and connect with others. 😀 <br>
@@ -186,12 +184,12 @@
 								<u>Yong-Han Lin</u>,  Li-Ting Su, Uei-Dar Chen, Yi-Chi Lee, Peng-Jui Wang, Yung-Ju Chang (In submission to IMWUT '24)
 						   </div></li>
 							<li><div class="trigger mobile_notifications experience_sampling_method ubiquitous_devices system_evaluation" style="margin-bottom: 5px; padding: 5px;"><span style="font-weight: 600;color: #035772;">Automatic, Manual, or Hybrid? A Preliminary Investigation of Users’ Perception of Features for Supporting Notification Management </span> 
-								[<a href="https://dl.acm.org/doi/abs/10.1145/3594739.3610699" target="_blank">ACM Digital Library</a>] - Poster | Project Lead<br>
+								[<a href="https://dl.acm.org/doi/abs/10.1145/3594739.3610699" target="_blank">ACM Digital Library</a>] - Poster | Project Lead & Presenter<br>
 								<u>Yong-Han Lin</u>,  Li-Ting Su, Uei-Dar Chen, Peng-Jui Wang, Yi-Chi Lee, Yung-Ju Chang (UbiComp/ISWC '23)
 							</div></li>
 							<li><div class="trigger mobile_notifications ubiquitous_devices system_evaluation" style="margin-bottom: 5px; padding: 5px;"><span style="font-weight: 600;color: #035772;">A Notification Management System for: Sorting and Classifying Smartphone’s Notifications </span>
-								 [<a href="files/TAICHI_2021_Poster_file_59.pdf" target="_blank">link</a>] - Poster | Project lead<br>
-								<u>Yong-Han Lin</u>*, Yin-Hsuan Liao*, Chia-Yu Huang*, Yu-Wei Yang, Hsin-Chien Tung, Chieh Hsu, Yung-Ju Chang (TAICHI '21)
+								 [<a href="files/TAICHI_2021_Poster_file_59.pdf" target="_blank">link</a>] - Poster | Project lead & Presenter<br>
+								<u>Yong-Han Lin</u>*, Yin-Hsuan Liao*, Chia-Yu Huang*, Yu-Wei Yang, Hsin-Chien Tung, Chieh Hsu, Yung-Ju Chang (TAICHI '21 - the top domestic HCI conference in Taiwan)
 							</div></li>
 	
 						</ul>
@@ -223,6 +221,30 @@
 						<p>NotiManager is an intelligent notification management system that can replace smartphone user’s notification drawers and support users to automated or manually sort and classify their own notifications. Click image to see the paper!</p>
 					</article>-->
 				</div>
+			</section>
+
+			<section id="more">
+				<h2>More</h2>
+				<p>
+					Outside of research, I love... 
+					<div class="row">
+						<ul>
+							<li>
+								<a href="./more_about_me/index.html#travel" target="_blank">travel and photographing</a>
+							</li>
+							<li>
+								<a href="./more_about_me/index.html#music" target="_blank">music and playing music</a> 
+							</li>
+							<li>
+								<a href="./more_about_me/index.html#reading" target="_blank">reading and writing</a>
+							</li>
+							<li>
+								<a href="./more_about_me/index.html#other" target="_blank">doing something cool</a>
+							</li>
+	
+						</ul>
+					</div>
+				</p>
 			</section>
 
 			<!-- Projects -->
