--- a/index.html
+++ b/index.html
@@ -71,9 +71,10 @@
 						
 					</p>
 					<p>My research interests lie in the fields of <span style="font-weight: 600;color: #035772;">Human-Computer Interaction (HCI)</span> and <span style="font-weight: 600;color: #035772;">Ubiquitous Computing (UbiComp)</span>.
-						I am interested in  investigating the well-being challenges in people’s daily interactions with ubiquitous technologies and create hybrid (human + machine intelligence) applications to solve their problems for improving well-being. 
+						I am interested in  investigating the well-being challenges in people’s daily interactions with ubiquitous technologies and create systems to solve the problems. 
 						As a HCI researcher, I envision a future in which all technologies understand people and support their well-being.
-						Recently, I am conducting research to understand the usages and experiences of notification management functionalities on mobile devices, as well as users' preferences for manual, automatic, or hybrid approaches.
+						Recently, I am conducting research to investigate and evaluate users' experiences of the notification system we built for notification management. 
+						The notification system includes three management features: pinning, sorting, and categorization. Sorting and categorization are employed both in manual and automatic approaches.
 
 					</p>
 					<p>
