--- a/more_about_me/index.html
+++ b/more_about_me/index.html
@@ -180,7 +180,7 @@
 									<h2>Ted X NCTU</h2>
 									<p>We gather young people to discuss issues nowadays that can inspire the young to sketch the blue script of their future. I was an event planner in 2019.</p>
 									<ul class="actions">
-										<li><a href="https://www.ted.com/tedx/events/35049" target="_blank" class="button">Official Website</a></li>
+										<li><a href="https://www.ted.com/tedx/events/35049" target="_blank" class="button">2019 Official Website</a></li>
 									</ul>
 								</div>
 							</div>
