update main page and add project site

--- a/more_about_me/elements.html
+++ b/more_about_me/elements.html
@@ -319,8 +319,8 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 									<h3>Fit</h3>
 									<div class="box alt">
 										<div class="row gtr-uniform">
-											<div class="col-12"><span class="image fit"><img src="images/pic04.jpg" alt="" /></span></div>
-											<div class="col-4"><span class="image fit"><img src="images/pic01.jpg" alt="" /></span></div>
+											<div class="col-12"><span class="image fit"><img src="images/hackathon.jpg" alt="" /></span></div>
+											<div class="col-4"><span class="image fit"><img src="images/IOC.PNG" alt="" /></span></div>
 											<div class="col-4"><span class="image fit"><img src="images/pic02.jpg" alt="" /></span></div>
 											<div class="col-4"><span class="image fit"><img src="images/pic03.jpg" alt="" /></span></div>
 											<div class="col-4"><span class="image fit"><img src="images/pic03.jpg" alt="" /></span></div>
