--- a/more_about_me/index.html
+++ b/more_about_me/index.html
@@ -54,7 +54,7 @@
 				<!-- Travel -->
 				<section id="travel" class="wrapper style3 fade-up">
 					<div class="inner">
-						<h2>Gallery <a href="https://www.instagram.com/s.cod_photo/" target="_blank" class="icon brands fa-instagram"><span class="label">Instagram</span></a></h2>
+						<h2>Photo Gallery <a href="https://www.instagram.com/s.cod_photo/" target="_blank" class="icon brands fa-instagram"><span class="label">Instagram</span></a></h2>
 						<p>Places I have been to... </p>
 						<div class="row">
 							<iframe src="https://www.google.com/maps/d/u/0/embed?mid=1GFZ-AyTyxEdq6YgV0Ru-KlMClg1JI9o&ehbc=2E312F&noprof=1" width="1000" height="600"></iframe>
