add new update about project site

--- a/index.html
+++ b/index.html
@@ -101,9 +101,15 @@
 			<!-- Updates -->
 			<section id="updates">
 				<h2>Updates</h2>
-				<div class="row">
+				<div class="row" style="height: 200px; overflow-y : scroll;">
 					<table class="table">
 						<tbody>
+							<tr>
+								<th scope="row">Dec., <br>2023</th>
+								<td>
+									<a href="./notimanager.html" target="_blank">Project site</a> for my research application - NotiManager is up! 🚀 
+								</td>
+							</tr>
 							<tr>
 								<th scope="row">Oct., <br>2023</th>
 								<td>
