--- a/notimanager.html
+++ b/notimanager.html
@@ -165,7 +165,7 @@
 					<h3 class="center" style="padding-top: 50px;">Download on Android Smartphone</h3>
 					<div class="button-container">
 						<ul class="actions button-center" style="top: 20%;">
-							<li><a class="tooltip" style="background-color: #483D88; cursor: pointer;">
+							<li><a class="tooltip" style="background-color: #483D88; cursor: pointer; width: auto;">
 								<span class="tooltiptext_down" style="font-size: 12px; padding: 10px 0; font-family: monospace;">COMING SOON...</span>
 								<img src="images/NotiManager/google-play-badge.png" class="google-play-button-center" alt="" />
 							</a></li>
