fix scroll problem

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 			<!-- Updates -->
 			<section id="updates">
 				<h2>Updates</h2>
-				<div class="row" style="height: 200px; overflow-y : scroll;">
+				<div class="row" style="height: 200px; overflow-y : scroll; -webkit-overflow-scrolling: touch;">
 					<table class="table">
 						<tbody>
 							<tr>
