--- a/notimanager.html
+++ b/notimanager.html
@@ -9,10 +9,30 @@
 		<title>NotiManager</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<meta name="description" content="NotiManager - research application for intelligent notificaiton management" />
+		<meta property="og:title" content="NotiManager" />
+		<meta property="og:type" content="website" />
+		<meta property="og:url" content="https://scod0401.github.io/notimanager.html" />
+		<meta property="og:image" content="images/NotiManager/logo.jpg" />
+		<meta property="og:description" content="NotiManager - research application for intelligent notificaiton management" />
+
 		<link rel="stylesheet" href="./more_about_me/assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="./more_about_me/assets/css/noscript.css" /></noscript>
+
+		<!-- Google Tag Manager -->
+		<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+		new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+		j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+		'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+		})(window,document,'script','dataLayer','GTM-M32WPS6H');</script>
+		<!-- End Google Tag Manager -->
 	</head>
 	<body class="is-preload">
+
+		<!-- Google Tag Manager (noscript) -->
+		<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-M32WPS6H"
+		height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+		<!-- End Google Tag Manager (noscript) -->
 
 		<!-- Header -->
 			<header id="header">
