--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 							<tr>
 								<th scope="row">Dec., <br>2023</th>
 								<td>
-									<a href="./notimanager.html" target="_blank">Project site</a> for my research application - NotiManager is up! 🚀 
+									<a href="./notimanager.html" target="_blank">Project site</a> for my research application, NotiManager, is now live! 🚀 
 								</td>
 							</tr>
 							<tr>
