--- a/notimanager.html
+++ b/notimanager.html
@@ -56,7 +56,7 @@
 						<div class="image center"><img src="images/NotiManager/logo.jpg" class="center" alt="" /></div>
 					</div>
 					<h1 class="center" style="color: #483D88; font-weight: 1000;"><div class="center">NotiManager</div></h1>
-					<h3 class="center" style="color: #483D88; font-weight: 1000;">A Research Application for Intelligent Notification Management</h3>
+					<h3 class="center" style="color: #483D88; font-weight: 1000; padding: 0 10px;">A Research Application for Intelligent Notification Management</h3>
 					<div class="button-container">
 						<ul class="actions button-center" style="padding-left: 50px; padding-right: 50px;">
 							<li><a class="button tooltip" style="background-color: #483D88;">
