--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 						<li><a title="Twitter" href="https://twitter.com/yoonghaan" target="_blank" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 						<li><a title="Linkedin" href="https://www.linkedin.com/in/yonghan-lin" target="_blank" class="icon brands fa-linkedin-in"><span class="label">Linkedin</span></a></li>
 						<li><a title="Email" href="mailto:alberta.cs07@nycu.edu.tw" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
-						<li><a title="CV" href="https://drive.google.com/file/d/1aa2c_XnYF-DGAyjIpD2wEWZuznh0Li1V/view?usp=sharing" target="_blank" class="icon brands"><i class="ai ai-cv ai-lg"></i></a></li>
+						<li><a title="CV" href="files/Yong-Han Lin's CV.pdf" target="_blank" class="icon brands"><i class="ai ai-cv ai-lg"></i></a></li>
 					</ul>
 					<ul class="actions">
 						<li><a href="#updates" class="button col-4">Updates</a></li>
@@ -113,7 +113,7 @@
 							<tr>
 								<th scope="row">Oct., <br>2023</th>
 								<td>
-									Presented <a href="https://dl.acm.org/doi/abs/10.1145/3594739.3610699" target="_blank">"Automatic, Manual, or Hybrid? A Preliminary Investigation of Users’ Perception of Features for Supporting Notification Management"</a> at UbiComp/ISWC 2023</a> in Cacun, Mexico.  
+									Presented <a href="https://dl.acm.org/doi/abs/10.1145/3594739.3610699" target="_blank">"Automatic, Manual, or Hybrid? A Preliminary Investigation of Users’ Perception of Features for Supporting Notification Management"</a> at UbiComp/ISWC 2023</a> in Cancun, Mexico.  
 								</td>
 							</tr>
 							<tr>
