--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 						<li><a title="Twitter" href="https://twitter.com/yoonghaan" target="_blank" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 						<li><a title="Linkedin" href="https://www.linkedin.com/in/yonghan-lin" target="_blank" class="icon brands fa-linkedin-in"><span class="label">Linkedin</span></a></li>
 						<li><a title="Email" href="mailto:alberta.cs07@nycu.edu.tw" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
-						<li><a title="CV" href="files/Yong-Han Lin's CV.pdf" target="_blank" class="icon brands"><i class="ai ai-cv ai-lg"></i></a></li>
+						<li><a title="CV" href="files/YongHan_Lin_CV.pdf" target="_blank" class="icon brands"><i class="ai ai-cv ai-lg"></i></a></li>
 					</ul>
 					<ul class="actions">
 						<li><a href="#updates" class="button col-4">Updates</a></li>
