--- a/index.html
+++ b/index.html
@@ -105,37 +105,43 @@
 					<table class="table">
 						<tbody>
 							<tr>
-								<th scope="row">Dec., <br>2023</th>
+								<th scope="row" style="width: 80px;">Jan 12, <br>2024</th>
+								<td>
+									Submission to IMWUT was recommended for a revision cycle!
+								</td>
+							</tr>
+							<tr>
+								<th scope="row" style="width: 80px;">Dec 26,<br>2023</th>
 								<td>
 									<a href="./notimanager.html" target="_blank">Project site</a> for my research application, NotiManager, is now live! 🚀 
 								</td>
 							</tr>
 							<tr>
-								<th scope="row">Oct., <br>2023</th>
+								<th scope="row" style="width: 80px;">Oct 10,<br>2023</th>
 								<td>
 									Presented <a href="https://dl.acm.org/doi/abs/10.1145/3594739.3610699" target="_blank">"Automatic, Manual, or Hybrid? A Preliminary Investigation of Users’ Perception of Features for Supporting Notification Management"</a> at UbiComp/ISWC 2023</a> in Cancun, Mexico.  
 								</td>
 							</tr>
 							<tr>
-								<th scope="row">June, <br>2023</th>
+								<th scope="row" style="width: 80px;">Jul 1,<br>2023</th>
 								<td>
 									Poster about users' perception of automatic, manual, hybrid notification management features is accepted to <a href="https://www.ubicomp.org/ubicomp-iswc-2023/" target="_blank">UbiComp/ISWC 2023</a>! Going to present it in person!
 								</td>
 							</tr>
 							<tr>
-								<th scope="row">April, <br>2023</th>
+								<th scope="row" style="width: 80px;">Apr 23,<br>2023</th>
 								<td>
 									Student volunteer at <a href="https://chi2023.acm.org/" target="_blank">CHI 2023</a>. My first in-person conference and I had so much fun! Thanks for having me at the last minute!
 								</td>
 							</tr>
 							<tr>
-								<th scope="row">Jan., <br>2023</th>
+								<th scope="row" style="width: 80px;">Jan 14,<br>2023</th>
 								<td>
 									Paper "Multiple Device Users’ Actual and Ideal Cross-Device Usage for Multi-Stage Notification-Interactions" is accepted to <a href="https://chi2023.acm.org/" target="_blank">CHI 2023</a>! Congrats and many thanks to my collaborators! 
 								</td>
 							</tr>
 							<tr>
-								<th scope="row">Nov., <br>2022</th>
+								<th scope="row" style="width: 80px;">Nov 8,<br>2022</th>
 								<td>
 									Student volunteer at <a href="https://cscw.acm.org/2022/" target="_blank">CSCW 2022</a>. Thanks for having me.
 								</td>
@@ -147,19 +153,19 @@
 								</td>
 							</tr>-->
 							<tr>
-								<th scope="row">June, <br>2022</th>
+								<th scope="row" style="width: 80px;">Jun 30,<br>2022</th>
 								<td>
 									Graduated from NYCU with a BS degree in Computer Science.
 								</td>
 							</tr>
 							<tr>
-								<th scope="row">June, <br>2022</th>
+								<th scope="row" style="width: 80px;">Jun 15,<br>2022</th>
 								<td>
 									Presented remotely at EASE 2022, here is the <a href="https://www.youtube.com/watch?v=iLEwW_DRu3U" target="_blank">video</a> and <a href="https://dl.acm.org/doi/10.1145/3530019.3534082" target="_blank">paper</a>.
 								</td>
 							</tr>
 							<tr>
-								<th scope="row">May, <br>2022</th>
+								<th scope="row" style="width: 80px;">Apr 26,<br>2022</th>
 								<td>
 									Paper "Understanding the Characteristics of Visual Contents in Open Source Issue Discussions" is accepted to <a href="https://conf.researchr.org/home/ease-2022" target="_blank">EASE 2022</a>! Congrats and many thanks to my collaborators!
 								</td>
@@ -188,7 +194,7 @@
 							<li><div class="trigger mobile_notifications experience_sampling_method ubiquitous_devices system_evaluation" id="noti_evaluation" style="margin-bottom: 5px; padding: 5px;"><span style="font-weight: 600;color: #035772;">Pinning, Sorting, and Categorizing Notifications: A Mixed-methods Usage and Experience Study of Mobile Notification-management Features </span> 
 								- Full paper | Project lead<br>
 								<u>Yong-Han Lin</u>,  Li-Ting Su, Uei-Dar Chen, Yi-Chi Lee, Peng-Jui Wang, Yung-Ju Chang 
-								<br><em>In submission to the 2024 ACM on Interactive, Mobile, Wearable and Ubiquitous Technologies</em> (IMWUT '24)
+								<br><em>In submission to the 2024 ACM on Interactive, Mobile, Wearable and Ubiquitous Technologies</em> (IMWUT '24) [Revision Cycle]
 								<br>[<a class="abs_trigger" id="abs_noti_evaluation" style="cursor: pointer;">ABS</a>] 
 								[<a href="mailto:alberta.cs07@nycu.edu.tw" target="_blank">Request For Paper</a>]
 						   </div></li>
@@ -342,7 +348,7 @@
 		<footer id="footer">
 			<div class="inner">
 				<ul class="copyright">
-					<li>&copy; 2024 Yong-Han Lin. Last updated: Jan., 2024.</li><li>Design: <a href="http://html5up.net" target="_blank">HTML5 UP</a></li>
+					<li>&copy; 2024 Yong-Han Lin. Last updated: Jan 22, 2024.</li><li>Design: <a href="http://html5up.net" target="_blank">HTML5 UP</a></li>
 				</ul>
 			</div>
 		</footer>
