update NotiManager site

--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
 					</p>
 					<p>My research interests lie in the fields of <span style="font-weight: 600;color: #035772;">Human-Computer Interaction (HCI)</span> and <span style="font-weight: 600;color: #035772;">Ubiquitous Computing (UbiComp)</span>.
 						I am interested in  investigating the well-being challenges in people’s daily interactions with ubiquitous technologies and create systems to solve the problems. 
-						Recently, my research has focused on investigating and evaluating users' experiences with the intelligent notification system we developed to manage notifications effectively and efficiently.
-						As a HCI researcher, I envision a future in which all technologies understand people and support their well-being.
+						Recently, my research has focused on using mixed-methods to investigate and evaluate users' experiences with the intelligent notification system developed for managing notifications effectively and efficiently.
+						As a HCI researcher, I envision a future in which technologies understand people and support their well-being.
 					</p>
 					<p>
 						In the past, I had two remote research internship experiences. One was at the UC Davis Collaborative and Social Computing (CSC) Lab, where I worked with <a href="http://www.haochuanwang.info/" target="_blank">Dr. Hao-Chuan Wang</a> 
