--- a/notimanager.html
+++ b/notimanager.html
@@ -7,6 +7,7 @@
 <html>
 	<head>
 		<title>NotiManager</title>
+		<link rel="icon" type="image/x-icon" href="images/NotiManager/logo.jpg">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<meta name="description" content="NotiManager - research application for intelligent notificaiton management" />
@@ -127,13 +128,13 @@
 
 						<h2 style="padding-top: 60px;">Why should you consider using NotiManager?</h2>
 						<p style="font-size: 20px;">
-							<span class="icon fa-hand-point-right"> To focus on the current task or activity</span>
-							<br><span class="icon fa-hand-point-right"> To defer notificaiton to convenient time / spare time / post-context / more suitable device</span>
-							<br><span class="icon fa-hand-point-right"> To locate the notification more quickly in the future</span>
-							<br><span class="icon fa-hand-point-right"> To categorize notification for later processing</span>
-							<br><span class="icon fa-hand-point-right"> To retain information for future reference</span>
-							<br><span class="icon fa-hand-point-right"> To view the full content of the notification without having it deleted</span>
-							<br><span class="icon fa-hand-point-right"> To prevent the notification from being accidentally deleted</span>
+							<span style="color: white;">👉🏻 </span>To focus on the current task or activity
+							<br><span style="color: white;">👉🏻 </span>To defer notificaiton to convenient time / spare time / post-context / more suitable device
+							<br><span style="color: white;">👉🏻 </span>To locate the notification more quickly in the future
+							<br><span style="color: white;">👉🏻 </span>To label and filter notification for later processing
+							<br><span style="color: white;">👉🏻 </span>To retain information for future reference
+							<br><span style="color: white;">👉🏻 </span>To view the full content of the notification without having it deleted
+							<br><span style="color: white;">👉🏻 </span>To prevent the notification from being accidentally deleted
 						</p>
 
 						<!--<h2 style="padding-top: 60px;">What did our study participants say?</h2>
@@ -142,6 +143,86 @@
 							not have the time to check it right now, and I intend to look at it later. 
 							Pinning it ensures that I do not accidentally dismiss it.""
 						</p>-->
+
+						<h2 style="padding-top: 60px;">In our mix-methods study, we learned:</h2>
+						<p style="font-size: 20px;">
+							<span style="color: white;">🎯 </span>How often, if at all, will users utilize sorting, categorization, and pinning in a notification interface
+								when it is made available to them?
+							<br><span style="color: white;">🎯 </span>What are users’ perceptions of the usefulness of these three features, separately and collectively?
+							<br><span style="color: white;">🎯 </span>Do users find manual or automatic sorting and categorization more helpful?
+							<div style="font-size: 20px;">
+								Want to see more about how we conducted this study?
+							</div>
+							<div style="font-size: 20px;">
+								Check out our <a href="#articles"><span style="font-weight: 500;color: #eeeeee;">publications</span></a> <span style="color: white;">👀</span>
+							</div>
+						</p>
+
+						<h2 style="padding-top: 60px;">Highlighted Findings</h2>
+						<p style="font-size: 20px;">
+							<div style="padding-bottom: 10px;font-size: 20px;">For pinning:</div>
+							<div style="font-size: 20px;">
+								<span style="color: white;">✨ </span>Compared to snooze, a feature already used in the current notification system for deferring notifications, pinning had comparative advantages, including 1) enabling the taking of quick, simple actions without the need for deliberation and 2) obviating the need for pre-scheduled re-engagement.
+								<br><span style="color: white;">✨ </span>Deferring notifications until a more convenient time, enabling easier future access to the information contained within notifications, and preventing accidental removal of notifications were the key reasons for using pinning in our study.
+								<br><span style="color: white;">✨ </span>A major user behavior pattern regarding pinning is to pin before carefully assessing notifications. This serves as an intuitive workaround to address problems related to accidental deletions of notifications (which are dismissed upon interaction) and allows for worry-free initial assessments of whether further action is needed.
+								<br><span style="color: white;">✨ </span>The different reasons for pinning are associated with distinct durations for which the notifications remain pinned.
+							</div>
+
+							<div style="padding: 60px 0 10px 0;font-size: 20px;">For sorting:</div>
+							<div style="font-size: 20px;">
+								<span style="color: white;">✨ </span>The automatically sorted sequences did not work as well as expected for our participants. Possible reasons include the limited features of our training model, which lacks broader contextual information and generalizability. Additionally, some of our participants tended to skim through their notifications, processing them swiftly, irrespective of their arrangement.
+								<br><span style="color: white;">✨ </span>Manual sorting was used in combination with the pinning function nearly one-fifth of the time.
+								<br><span style="color: white;">✨ </span>The positions to which participants manually sorted these notifications varied depending on their intent. 
+								Moving notifications to the top of the stack was generally to enhance their visibility and thus their utility as reminders. On the other hand, relegating
+								notifications to lower positions often indicated that the user’s review of notifications was complete and user wants to make more ’screen real estate’ available for unread notifications. 
+							</div>
+
+							<div style="padding: 60px 0 10px 0;font-size: 20px;">For categorization:</div>
+							<div style="font-size: 20px;">
+								<span style="color: white;">✨ </span>Most of our participants did not perceive a need for additional categories to manage their notifications, especially when their systems already had an automatic categorization function. This contrasts with emails (as past research suggests for this kind of design), which can accumulate over months or years, necessitating more organizational features to streamline and categorize their content for efficient future retrieval. 
+								A possible reason is that mobile users generally have an inclination to dismiss notifications as a (not always accurate) means of helping themselves feel that nothing important has been left undone. 
+								<br><span style="color: white;">✨ </span>
+								Our participants seldom used categorization to navigate through notifications because most notifications only required a quick scan, taking minimal time, and therefore did not warrant additional viewing steps.
+								<br><span style="color: white;">✨ </span>Automatic categorization is useful when users have many notifications in the drawer and need to find a specific type among them.
+								<br><span style="color: white;">✨ </span> Automatic categorization outcomes were deemed sufficient for many participants' needs, achieved through straightforward rules based on app-store categories rather than using machine learning.
+							</div>
+						</p>
+
+						<h2 style="padding-top: 60px;">Takeaways</h2>
+						
+						<p style="font-size: 20px;">
+							<div style="font-size: 20px;">If you are a ...</div>
+							<br><div style="font-size: 20px;">
+								<div>
+								<span style="color: white;">👩🏻‍💻 </span>Notification System Designer or Developer: 
+								<br>Our research suggests that future notification systems may incorporate features that allow for quick, 
+								risk-free assessment of notifications, and/or integrate capabilities that ensure that important information 
+								in notifications can be easily retrieved when needed. For example, features like pinning, manual sorting, 
+								and automatic categorization have shown effectiveness in our study, especially when used in combination. 
+								The remaining features in NotiManager (i.e., automatic sorting and manual categorization) are worth considering, 
+								although they were not shown to work effectively in our study.  
+								Our findings show recommendations on how to improve their design.  
+								</div>
+
+								<br><div><span style="color: white;">👩🏻‍🔬 </span>Notification Researcher: 
+								<br>In our research, we contribute valuable empirical evidence to the field of notification research, offering guidelines for 
+								the design of more effective notification management systems. Based on the evidence from the current study, we do not recommend 
+								adding automatic sorting and manual categorization features. 
+								However, we encourage future research to continue exploring the circumstances under which smartphone users might find these 
+								features beneficial.
+
+								In addition, there is potential for research applications to distinguish between users’ reasons for pinning based 
+								solely  on pinning duration, eliminating the need for experience sampling method to determine user intent.
+								</div> 
+								
+								<br><div><span style="color: white;">🙋🏻‍♀️ </span>Notification User: 
+								<br>Our findings provide valuable insights into our participants' experiences with features in NotiManager, 
+								offering a deeper understanding of the reasons and contexts for their usage. Our participants enjoy the 
+								three management features, with pinning being a standout favorite. Some participants have 
+								continued using NotiManager even after the study. Download our app now to explore and experience it for yourself!  
+								</div>
+							</div> 
+						</p>
 					</div>
 				</section>
 
